git-svn-id: svn://svn.r-forge.r-project.org/svnroot/geovec@3 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/geovec/DESCRIPTION
+++ b/pkg/geovec/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: gvector
+Package: geovec
 Type: Package
-Title: gvector
-Version: 0.0-1
-Date: 22-December-2011
+Title: Manipulation of geographic vector (points, lines, polygons) data
+Version: 0.0-2
+Date: 29-December-2011
 Depends: methods, sp, raster, rgeos (>= 0.1-15), R (>= 2.11.0)
-Suggests: deldir
+Suggests: deldir, rgdal, XML
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com> 
 Description: geographic vector data manipulation
