--- a/pkg/sptools/DESCRIPTION
+++ b/pkg/sptools/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: sptools
 Type: Package
 Title: Manipulation of geographic object data (points, lines, polygons)
-Version: 0.2-1
-Date: 5-October-2012
-Depends: methods, sp, raster, rgeos (>= 0.1-15), R (>= 2.11.0)
+Version: 0.2-2
+Date: 2012-07-02
+Depends: methods, sp, rgeos (>= 0.1-15), R (>= 2.11.0)
 Suggests: deldir, rgdal, XML
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com> 
