--- a/pkg/sptools/DESCRIPTION
+++ b/pkg/sptools/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: sptools
 Type: Package
-Title: Manipulation of geographic object data (points, lines, polygons)
-Version: 0.2-3
-Date: 2012-07-03
-Depends: methods, sp, rgeos (>= 0.1-15), R (>= 2.11.0)
+Title: Manipulation of geographic objects (points, lines, polygons)
+Version: 0.2-4
+Date: 2012-10-03
+Depends: methods, sp, rgeos (>= 0.1-15), R (>= 2.12.0)
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com> 
-Description: geographic vector data manipulation
+Description: geographic object manipulation
 License: GPL (>=3)
 URL: http://raster.r-forge.r-project.org/
